--- a/index.html
+++ b/index.html
@@ -304,6 +304,26 @@
 
   </div><!-- /.container -->
 
+   <div class="profiles">
+    <h1>CONTACT</h1>
+  </div>
+
+  <div class="container">
+    <form class="form">
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  placeholder="Email address">
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Comments</label>
+        <textarea type="text" class="form-control" id="exampleInputPassword1" placeholder="Comment here">
+        </textarea>
+      </div>
+      <button type="submit" class="btn btn-submit">Submit</button>
+    </form>
+
+    <hr class="featurette-divider">
+  </div>
 
   <!-- FOOTER -->
   <footer class="container">
